--- a/relatorio2/relatorio2.tex
+++ b/relatorio2/relatorio2.tex
@@ -536,7 +536,7 @@ Nela podemos ver que:
         Coeficiente de Temperatura = \frac{V_{MAX} - V_{MIN}}{V_{REF}} \cdot \frac{1}{100 - \left(-10\right)} \cdot 10^6
     \end{equation}
 
-Obs.: Caso a tensão de saída esteja variando muito com a temperatura, reajuste o valor de $R_2$.
+Obs.: Caso a tensão de saída esteja variando muito com a temperatura, reajuste o valor de $R_2$. \\
 
     O esquemático está representado na Figura \ref{imagQ25esquematico}. \\
     As dimensões são do transistores PMOS são $W = 19,8 \mu m$ e $L = 24 \mu m$ (dividido em 2 de $L = 12 \mu m$) e as do NMOS são $W = 91,1 \mu m$ e $L = 1 \mu m$. \\
@@ -550,9 +550,9 @@ Obs.: Caso a tensão de saída esteja variando muito com a temperatura, reajuste o
 
 
 \textbf{26.} *Desenhe o \emph{layout} da fonte de tensão completa. Utilize o transistor vertical PRIMLAB/VERT10 da biblioteca. Ajuste o comprimento de $R_2$ no \emph{layout} para que o coeficiente de temperatura do circuito esxtraído se mantenha abaixo de 50 ppm/ºC. \\
-Obs.: o transistor bipolar extraído vem com o parâmetro Area. Apague este parâmetro senão ficará errado.
+Obs.: o transistor bipolar extraído vem com o parâmetro Area. Apague este parâmetro senão ficará errado. \\
 
-    O \emph{layout} da fonte de tensão completa está representado na Figura \ref{imagQ26layoutFonte}. O gráfico de coeficiente de temperatura por comprimento $L$ do resistor está na figura \ref{imagQ26coeficienteDeTemperatura}.
+    O \emph{layout} da fonte de tensão completa está representado na Figura \ref{imagQ26layoutFonte}. O gráfico de coeficiente de temperatura por comprimento $L$ do resistor está na figura \ref{imagQ26coeficienteDeTemperatura}. \\
 
     \img{\emph{Layout} da fonte de tensão completa}{imagQ26layoutFonte}{imagQ26layoutFonte}
 
@@ -560,16 +560,16 @@ Obs.: o transistor bipolar extraído vem com o parâmetro Area. Apague este parâme
 
 
 \textbf{27.} *Adicione ao \emph{layout Pads} de $V_{DD}$ e $GND$. Passar o DRC para verificar se tudo está correto. Quais são as dimensões do circuito com os \emph{Pads}? Apresente o \emph{layout} do circuito e o gráfico $V_{REF}$ x Temperatura para valores de $V_{DD}$ de 2,0 V, 2,5 V e 3,0V. \\
-Obs.: um bloco de \emph{Pad} pode ser encontrado na biblioteca IOLIB\_4M, célula g-padonly.
+Obs.: um bloco de \emph{Pad} pode ser encontrado na biblioteca IOLIB\_4M, célula g-padonly. \\
 
-    O \emph{layout} do circuito está representado na Figura \ref{imagQ27layoutCircuito}, com dimensões de $114,581 \mu m$ por $325,850 \mu m$, o que resulta em uma área do circuito de $37.336,2 \mu m^2$. % Pontos (81.307, -157.450), (195.825, 168.400) \\
-    O gráfico $V_{REF}$ x Temperatura para valores de $V_{DD}$ de 2,0 V, 2,5 V e 3,0V estão representados na Figura \ref{imagQ27refTemp}.
+    O \emph{layout} do circuito está representado na Figura \ref{imagQ27layoutCircuito}, com dimensões de $114,518 \mu m$ por $260,850 \mu m$, o que resulta em uma área do circuito de $29.888,5 \mu m^2$. % Pontos (81.307, -92.450), (195.825, 168.400) \\
+    O gráfico $V_{REF}$ x Temperatura para valores de $V_{DD}$ de 2,0 V, 2,5 V e 3,0V estão representados na Figura \ref{imagQ27refTemp}. \\
 
     \img[0.45]{\emph{Layout} do circuito com \emph{Pads}}{imagQ27layoutCircuito}{imagQ27layoutCircuito}
     \img{$V_{REF}$ x Temperatura}{imagQ27refTemp}{imagQ27refTemp}
 
 
-    Alguns dados adicionais: os transistores MOS, apesar de terem em primeira ordem um funcionamento simples, precisam de modelos que são cada vez mais sofisticados. Um dos modelos mais conhecidos, e não por isso o melhor, é o BSIM (Berkeley Short Channel IGFET Model, http://www-device.eecs.berkeley.edu/~bsim3/). Este modelo teve diversas edições e versões. Abaixo há exemplo dos parâmetros do modelo BSIM3V3 para a tecnologia CMOS $0,35 \mu m$ da AMS.
+    Alguns dados adicionais: os transistores MOS, apesar de terem em primeira ordem um funcionamento simples, precisam de modelos que são cada vez mais sofisticados. Um dos modelos mais conhecidos, e não por isso o melhor, é o BSIM (Berkeley Short Channel IGFET Model, http://www-device.eecs.berkeley.edu/~bsim3/). Este modelo teve diversas edições e versões. Abaixo há exemplo dos parâmetros do modelo BSIM3V3 para a tecnologia CMOS $0,35 \mu m$ da AMS. \\
 
 Obs.:   U0 é a mobilidade inicial e tem unidade de $cm^2$/($V \cdot s$); \\
         TOX é a espessura do óxido em metros; \\
