Questao 11 com resultado da 10.

--- a/relatorio3/relatorio3.tex
+++ b/relatorio3/relatorio3.tex
@@ -140,7 +140,7 @@ Faça a verificação com o \textbf{DRC} (CALIBRE), passe o \textbf{LVS} e elimine 
         Teórica             &       x.xx            \\  \hline  
         \emph{Schematic}    &       1.47            \\  \hline  
         Extração C + CC     &       1.097           \\  \hline  
-        Extração R + C + CC &       z.zz            \\  \hline  
+        Extração R + C + CC &       1.02            \\  \hline  
     
     \end{tabular}
 \end{table}
